--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,10 @@ default: &default
 development:
   <<: *default
   database: rpg_game_editor_development
-
+  host: localhost
+  username: rpg_user
+  password: <%= ENV['RPG_DB_PASSWORD'] %>
+  
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -58,6 +61,9 @@ development:
 test:
   <<: *default
   database: rpg_game_editor_test
+  host: localhost
+  username: rpg_user
+  password: <%= ENV['RPG_DB_PASSWORD'] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,5 +87,6 @@ test:
 production:
   <<: *default
   database: rpg_game_editor_production
-  username: rpg_game_editor
-  password: <%= ENV['RPG_GAME_EDITOR_DATABASE_PASSWORD'] %>
+  host: localhost
+  username: rpg_user
+  password: <%= ENV['RPG_DB_PASSWORD'] %>
